--- a/frame-server/server/web/views/partials/navbarWelcome.ejs
+++ b/frame-server/server/web/views/partials/navbarWelcome.ejs
@@ -4,22 +4,22 @@
     <div class="nav-collapse collapse" id="topNavList" role="navigation">
       <div>
         <ul class="titleFont nav pull-right" aria-labelledby="topNavList">
-          <li><a href="/">Home</a></li>
-          <li id="startsurvey">Start Survey</li>
-          <li><a href="/contact">Contact Us</a></li>
-          <li id="logout">Logout</li>
+          <li><a href="/"><%= gettext("Home") %></a></li>
+          <li id="startsurvey"><%= gettext("Start Survey") %></li>
+          <li><a href="/contact"><%= gettext("Contact Us") %></a></li>
+          <li id="logout"><%= gettext("Logout") %></li>
         </ul>
-        <p class="sub-title titleFont nav username" id="nav">Hello, <%= name %>!</p>
+        <p class="sub-title titleFont nav username" id="nav"><%= gettext("Hello, %s!", name) %></p>
       </div>
     </div>
   </div>
   <div class="nav-bottom-border"></div>
   <noscript>
     <p id="js-off-message">
-      The page could not be loaded. The BYO-CAT Project currently
-      does not fully support browsers with &quot;JavaScript&quot; disabled. Please note
-      that if you choose to continue without enabling &quot;JavaScript&quot; certain functionalities
-      on this website may not be available.
+      <%= gettext("The page could not be loaded. The BYO-CAT Project " +
+      "does not fully support browsers with &quot;JavaScript&quot; disabled. Please note " +
+      "that if you choose to continue without enabling &quot;JavaScript&quot; certain functionalities " +
+      "on this website may not be available.") %>
     </p>
   </noscript>
 </div>
