--- a/frame-server/server/web/views/contact_accessible.ejs
+++ b/frame-server/server/web/views/contact_accessible.ejs
@@ -12,7 +12,7 @@
       <div class="row ">
         <div>
           <div class="contactUs">
-            <h4>Contact Us</h4>
+            <h4><%= gettext("Contact Us") %></h4>
             <div class="contact">
               <ul class="list-no-style">
 
@@ -25,7 +25,7 @@
                 <% if(locals.officePhone) { %>
                 <li class="phone">
                   <span aria-hidden="true"><i class="fa fa-mobile">&nbsp;&nbsp;</i></span><span
-                    class="sr-only">mobile:</span><span class="addressText"><%= locals.officePhone%></span>
+                    class="sr-only"><%= gettext("mobile:") %></span><span class="addressText"><%= locals.officePhone%></span>
                 </li>
                 <% } %>
 
@@ -33,7 +33,7 @@
                 <% if(locals.directPhone) { %>
                   <li class="phone">
                     <span aria-hidden="true"><i class="fa fa-phone">&nbsp;&nbsp;</i></span><span
-                      class="sr-only">fax:</span><span class="addressText"><%= locals.directPhone%></span>
+                      class="sr-only"><%= gettext("fax:") %></span><span class="addressText"><%= locals.directPhone%></span>
                   </li>
 
                 <% } %>
@@ -42,7 +42,7 @@
                 <% if(locals.email) { %>
                   <li class="email">
                     <span aria-hidden="true"><i class="fa fa-envelope">&nbsp;&nbsp;</i></span><span
-                    class="sr-only">email:</span><span class="addressText"> <a href="mailto:<%=locals.email%>"><%=locals.email%></a></span>
+                    class="sr-only"><%= gettext("email:") %></span><span class="addressText"> <a href="mailto:<%=locals.email%>"><%=locals.email%></a></span>
                   </li>
                 <% } %>
 
