--- a/frame-server/server/web/views/login_accessible.ejs
+++ b/frame-server/server/web/views/login_accessible.ejs
@@ -8,31 +8,31 @@
 <main role="main" aria-label="main section" id="main-content">
     <!--Your custom code goes here-->
     <div class="addressBox login-container" id="contactForm">
-        <h4 class="center">Welcome Back!</h4>
+        <h4 class="center"><%= gettext("Welcome Back!") %></h4>
         <div class="clearfix feedbackMSG1"></div>
         <div class="contact">
             <form id="formID">
                 <div class="form-group">
-                    <label class="form_label required" for="emailReady">Email:</label>
+                    <label class="form_label required" for="emailReady"><%= gettext("Email:") %></label>
                     <input id="emailReady" class="form-control" type="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="passReady" class="form_label required">Password</label>
+                    <label for="passReady" class="form_label required"><%= gettext("Password") %></label>
                     <input type="password" name="password" required class="form-control" id="passReady">
                 </div>
-                <button id="submitButton" class="btn btn-primary">Login</button>
+                <button id="submitButton" class="btn btn-primary"><%= gettext("Login") %></button>
             </form>
         </div>
     </div>
     <div class="form-group center marginTop40">
-        Don't have an account yet? <a href="/register">Please sign up</a>
+        <%= gettext("Don't have an account yet?") %> <a href="/register"><%= gettext("Please sign up") %></a>
     </div>
     <div class="form-group center marginTop10">
-      Forgot your password? <a href="/forgot">Please click here</a>
+      <%= gettext("Forgot your password?") %> <a href="/forgot"><%= gettext("Please click here") %></a>
     </div>
 </main>
 
-<a href="#" class="scrollToTop" alt="Scroll To Top"><span class="sr-only">Scroll To Top</span></a>
+<a href="#" class="scrollToTop" alt="Scroll To Top"><span class="sr-only"><%= gettext("Scroll To Top") %></span></a>
 <%- include('./partials/footer_accessible'); %>
 <script>
     $(function () {
@@ -58,7 +58,7 @@
                 success: function (data) {
                     basil.set('cookie', data);
                     if (JSON.parse(data).changePass) {
-                      alertModal("Your Password Has Expired", "BYO-CAT users are required to change their password every 90 days. You will be emailed a code and redirected to the password reset form.", function() {
+                      alertModal('<%= gettext("Your Password Has Expired") %>', '<%= gettext("BYO-CAT users are required to change their password every 90 days. You will be emailed a code and redirected to the password reset form.") %>', function() {
                         forgotPassword('<%= configUrl %>', usnm);
                       });
                     } else {
