--- a/frame-server/server/web/views/partials/footer_accessible.ejs
+++ b/frame-server/server/web/views/partials/footer_accessible.ejs
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4 offset-md-6">
       <img src= "/public/images/favicon.ico">
-      <small>Copyright &copy; 2017 <a href="https://sail.bu.edu/">SAIL</a>.
+      <small><%= gettext("Copyright &copy; 2017") %> <a href="https://sail.bu.edu/">SAIL</a>.
       </small>
     </div>
   </div>
