--- a/frame-server/server/web/views/partials/navbar.ejs
+++ b/frame-server/server/web/views/partials/navbar.ejs
@@ -5,10 +5,10 @@
       <div class="nav-collapse collapse" id="topNavList" role="navigation">
         <div>
           <ul class="nav pull-right" aria-labelledby="topNavList">
-            <li><a href="/">Home</a></li>
-            <li><a href="/register">Register</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/contact">Contact Us</a></li>
+            <li><a href="/"><%= gettext("Home") %></a></li>
+            <li><a href="/register"><%= gettext("Register") %></a></li>
+            <li><a href="/login"><%= gettext("Login") %></a></li>
+            <li><a href="/contact"><%= gettext("Contact Us") %></a></li>
           </ul>
         </div>
       </div>
@@ -17,10 +17,10 @@
   <div class="nav-bottom-border"></div>
   <noscript>
     <p id="js-off-message">
-      The page could not be loaded. The BYO-CAT Project
-      does not fully support browsers with &quot;JavaScript&quot; disabled. Please note
-      that if you choose to continue without enabling &quot;JavaScript&quot; certain functionalities
-      on this website may not be available.
-    </p>
+      <%= gettext("The page could not be loaded. The BYO-CAT Project " +
+      "does not fully support browsers with &quot;JavaScript&quot; disabled. Please note " +
+      "that if you choose to continue without enabling &quot;JavaScript&quot; certain functionalities " +
+      "on this website may not be available.") %>
+      </p>
   </noscript>
 </div>
