--- a/frame-server/server/web/views/summary.ejs
+++ b/frame-server/server/web/views/summary.ejs
@@ -4,8 +4,8 @@
   <div class="hidden" id="data"></div>
   <br>
   <br>
-  <h3 class="text-center minor-padding-bottom">Score Summary for this Survey</h3>
-  <p class="text-center minor-padding-bottom">Survey Id: <%= createdSurveyId %></p>
+  <h3 class="text-center minor-padding-bottom"><%= gettext("Score Summary for this Survey") %></h3>
+  <p class="text-center minor-padding-bottom"><%= gettext("Survey Id: %s", createdSurveyId) %></p>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -13,8 +13,8 @@
           <table class="table table-bordered table-hover">
             <thead>
             <tr>
-              <th scope="col" id="table-header" class="table-title text-left">Scale</th>
-              <th scope="col" id="table-header" class="table-title text-left">Score (SE)<sup>*</sup></th>
+              <th scope="col" id="table-header" class="table-title text-left"><%= gettext("Scale") %></th>
+              <th scope="col" id="table-header" class="table-title text-left"><%= gettext("Score (SE)") %><sup>*</sup></th>
             </tr>
             </thead>
             <tbody>
@@ -44,14 +44,14 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="downloadModalLabel">Survey Scores Preview</h4>
+        <h4 class="modal-title" id="downloadModalLabel"><%= gettext("Survey Scores Preview") %></h4>
       </div>
       <div class="modal-body">
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" id="downloadPDF">Download PDF</button>
-        <button type="button" class="btn btn-primary" data-export="export" id="downloadCSV">Download CSV</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal"><%= gettext("Close") %></button>
+        <button type="button" class="btn btn-primary" id="downloadPDF"><%= gettext("Download PDF") %></button>
+        <button type="button" class="btn btn-primary" data-export="export" id="downloadCSV"><%= gettext("Download CSV") %></button>
       </div>
     </div>
   </div>
