New demographic question types. Added dropdown-only, checkbox-only and checkbox-none-above to demographic quesions types. Cleaned up some HTML formatting, mostly added quotes to attribute values.

--- a/frame-server/server/web/views/partials/question_renderer.ejs
+++ b/frame-server/server/web/views/partials/question_renderer.ejs
@@ -6,48 +6,108 @@
   <% if (questions[i].type == "input-only") { %>
     <div class="demographic row bottomMargin25">
       <div class="col-md-6">
-        <input type="text" name=<%= questions[i].responseOptions[0].name %> id=<%= questions[i].responseOptions[0].id %>
-         />
+        <input type="text"
+               name="<%= questions[i].responseOptions[0].name %>"
+               id="<%= questions[i].responseOptions[0].id %>" />
       </div>
     </div>
   <% } %>
 
   <% if (questions[i].type == "radio-only") { %>
+    <radiogroup>
       <% for(var j = 0; j < questions[i].responseOptions.length; j++) { %>
-      <radiogroup>
         <div class="demographic row bottomMargin25">
           <div class="col-md-6">
-            <input type="radio" group=<%= questions[i].group %>
-                   name=<%= questions[i].responseOptions[j].name %> id=<%= questions[i].responseOptions[j].id %>
-                   value= <%= questions[i].responseOptions[j].value %> />
-            <label for=<%= questions[i].responseOptions[j].id %> class="padding-right-1"
+            <input type="radio"
+                   group="<%= questions[i].group %>"
+                   name="<%= questions[i].responseOptions[j].name %>"
+                   id="<%= questions[i].responseOptions[j].id %>"
+                   value="<%= questions[i].responseOptions[j].value %>" />
+            <label for="<%= questions[i].responseOptions[j].id %>"
                    class="padding-right-1"><%= questions[i].responseOptions[j].displayText %></label>
           </div>
         </div>
-      </radiogroup>
       <% } %>
+    </radiogroup>
   <% } %>
 
   <% if (questions[i].type == "radio-other") { %>
-    <% for(var j = 0; j < questions[i].responseOptions.length; j++) { %>
     <radiogroup>
-      <div class="demographic row bottomMargin25">
-        <div class="col-md-6">
-          <input type="radio" group=<%= questions[i].group %>
-          name=<%= questions[i].responseOptions[j].name %> id=<%= questions[i].responseOptions[j].id %>
-                 value= <%= questions[i].responseOptions[j].value %> />
-          <label for=<%= questions[i].responseOptions[j].id %> class="padding-right-1"
-                 class="padding-right-1"><%= questions[i].responseOptions[j].displayText %></label>
+      <% for(var j = 0; j < questions[i].responseOptions.length; j++) { %>
+        <div class="demographic row bottomMargin25">
+          <div class="col-md-6">
+            <input type="radio"
+                  group="<%= questions[i].group %>"
+                  name="<%= questions[i].responseOptions[j].name %>"
+                  id="<%= questions[i].responseOptions[j].id %>"
+                  value="<%= questions[i].responseOptions[j].value %>" />
+            <label for="<%= questions[i].responseOptions[j].id %>"
+                class="padding-right-1"><%= questions[i].responseOptions[j].displayText %></label>
+          </div>
         </div>
-      </div>
+      <% } %>
     </radiogroup>
-    <% } %>
     <div class="demographic row bottomMargin25">
       <div class="col-md-6">
-        <input type="text" name="other_"+ + <%= questions[i].responseOptions[j-1].name %> id="other-input" %> />
+        <input type="text"
+               name="<%= 'other_' + questions[i].responseOptions[j-1].name %>"
+               id="other-input" %> />
       </div>
     </div>
 
   <% } %>
+
+  <% if (questions[i].type == "dropdown-only") { %>
+    <div class="demographic row bottomMargin25">
+      <div class="col-md-6">
+        <select name="<%= questions[i].name %>" >
+          <% for(var j = 0; j < questions[i].responseOptions.length; j++) { %>
+            <option value="<%= questions[i].responseOptions[j].value %>" >
+                <%= questions[i].responseOptions[j].displayText %>
+            </option>
+          <% } %>
+        </select>
+      </div>
+    </div>
+  <% } %>
+
+  <% if (questions[i].type == "checkbox-only" || questions[i].type == "checkbox-none-above") { %>
+    <% for(var j = 0; j < questions[i].responseOptions.length; j++) { %>
+      <div class="demographic row bottomMargin25">
+        <div class="col-md-6">
+          <input type="checkbox"
+                  name="<%= questions[i].name %>[]"
+                  id="<%= questions[i].name %>-<%= questions[i].responseOptions[j].value %>"
+                  value="<%= questions[i].responseOptions[j].value %>"
+                  class="checkbox-<%= questions[i].name %>" >
+          <label for="<%= questions[i].name %>-<%= questions[i].responseOptions[j].value %>"
+                  class="padding-right-1"><%= questions[i].responseOptions[j].displayText %></label>
+        </div>
+      </div>
+    <% } %>
+    <% if (questions[i].type == "checkbox-none-above") { %>
+      <script>
+        // the selector will match all input controls with the
+        // class "checkbox-'question name'"
+        // and attach a click event handler
+        $("input.checkbox-<%= questions[i].name %>").on('change', function() {
+          // in the handler, 'this' refers to the box clicked on
+          var $box = $(this);
+          var group = "input:checkbox[name='" + $box.attr("name") + "']";
+          var $last = $(group).get(-1);
+          if ($box.is($last) ) {
+            if ($box.is(":checked")) {
+              $(group).prop("checked", false);
+              $box.prop("checked", true);
+            } 
+          }
+          else {
+            $last.checked = false;
+          }
+        });
+      </script>
+    <% } %>
+  <% } %>
+
 
 <% } %>
